Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 </li>
 <li>Nice flow for JupyterHub + Swarm.   Could connect nicely with the Spark + HDFS above. <a href="https://developer.rackspace.com/blog/deploying-jupyterhub-for-education/">https://developer.rackspace.com/blog/deploying-jupyterhub-for-education/</a>.  Associated Github page: <a href="https://github.com/compmodels/">https://github.com/compmodels/</a>
 </li>
+<li>Handy stacks: <a href="https://github.com/jupyter/docker-stacks">https://github.com/jupyter/docker-stacks</a>
+</li>
 </ul>
 
 <h2>
