Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
 <ul>
 <li><a href="https://github.com/s3fs-fuse/s3fs-fuse">https://github.com/s3fs-fuse/s3fs-fuse</a></li>
+<li>bashrc (<a href="https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5">https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5</a>)</li>
 </ul>
+
+
 
       <footer class="site-footer">
 
