Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="handy-links-and-notes" class="anchor" href="#handy-links-and-notes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Handy Links and Notes</h1>
-
-<h2>
+      <h2>
 <a id="docker" class="anchor" href="#docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docker</h2>
 
 <ul>
@@ -55,10 +52,11 @@
 
 <ul>
 <li><a href="https://github.com/s3fs-fuse/s3fs-fuse">https://github.com/s3fs-fuse/s3fs-fuse</a></li>
-<li>bashrc (<a href="https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5">https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5</a>)</li>
+<li>evolving bashrc: <a href="https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5">https://gist.github.com/geetduggal/830cda2cf406601833fce50dacbf54a5</a>
+</li>
+<li>evolving vimrc: <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38</a>
+</li>
 </ul>
-
-
 
       <footer class="site-footer">
 
