Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <li>Vim in a terminal: tried, true, and I always come back to it unless I need something more sophisticated</li>
 <li>git CLI</li>
 <li>iTerm2: best terminal for Mac OS</li>
+<li>Atom: I like the very robust package system and Markdown editing</li>
 </ul>
 
 <h3>
