Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 <li>
 <strong>Ordered YAML</strong> This is an evolving Gist combining a few techniques online for reading and writing YAML in Python in an ordered way: <a href="https://gist.github.com/geetduggal/9f6380d4ca33e380578df50134f14751">https://gist.github.com/geetduggal/9f6380d4ca33e380578df50134f14751</a>
 </li>
+<li>Some handy scripts to plot a schedule of jobs on a set of nodes.  These are really basic and I have more complex versions, but I wanted to keep the snippets of <a href="https://gist.github.com/geetduggal/eef2da7c0709de731763531b44871b52">code</a> for my reference (<a href="https://gist.github.com/geetduggal/5a960ad786c6fdf66cf3a0595ffd8a5d">config file</a>).  An example of a schedule plot:</li>
 </ul>
+
+<p><img src="images/job-schedule.png" alt="job-schedule"></p>
 
 <h2>
 <a id="programming-languages-of-interest-in-no-particular-order" class="anchor" href="#programming-languages-of-interest-in-no-particular-order" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programming languages of interest (in no particular order)</h2>
