Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <li>Wunderlist</li>
 <li>Dropbox</li>
 <li>Apple News</li>
-<li>Editorial</li>
+<li>iA Writer</li>
 <li>Macdown</li>
 <li>Tripit</li>
 <li>Github</li>
