Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <h2>
 <a id="philosophy" class="anchor" href="#philosophy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Philosophy</h2>
 
-<p>Given the abundance of scientific evidence on the issue, I am a relatively strong determinist. There are a variety of views on determinism, but I recently came across this video that most closely matches what I think on the topic:</p>
+<p>Views on determinism that generally match mine</p>
 
 <ul>
 <li><a href="https://youtu.be/pCofmZlC72g">https://youtu.be/pCofmZlC72g</a></li>
