--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <html>
-Under construction.
+
+<head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="style.css?v=1721710536">
+</head>
+
+
+<body>
+<h1>Geet Duggal</h1>
+
+</body>
+
 </html>
