--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="style.css?v=1721710536">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Margins Example</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
-<h1>Geet Duggal</h1>
-
+    <div class="content">
+        <h1>Welcome to My Website</h1>
+        <p>This is an example of applying responsive margins to the body element.</p>
+    </div>
 </body>
-
 </html>
