--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Margins Example</title>
-    <link rel="stylesheet" href="styles.css?v=1721795989">
+    <link rel="stylesheet" href="style.css?v=1721795989">
 </head>
 <body>
     <div class="content">
