--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Margins Example</title>
+    <title>Geet Duggal</title>
     <link rel="stylesheet" href="style.css?v=1721795989">
 </head>
 <body>
     <div class="content">
-        <h1>Welcome to My Website</h1>
+        <h1>Geet Duggal</h1>
         <p>This is an example of applying responsive margins to the body element.</p>
     </div>
 </body>
