--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css?v=1721795989">
 </head>
 <body>
-    <div class="content">
-        <h1>Geet Duggal</h1>
-        <p>This is an example of applying responsive margins to the body element.</p>
-    </div>
-</body>
-</html>
+<div class="content">
+
+<h1>Geet Duggal</h1>
+</div> </body> </html>
