--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
+<ul>
+<li>2024-07-22 Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.
+<li>2024-07-22 First Geet.  Geets are like Tweets but simple lines in text files
+</ul>
 </div> </body> </html>
