--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
-<ul>
-<li>2024-07-22 Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.
-<li>2024-07-22 First Geet.  Geets are like Tweets but simple lines in text files
-</ul>
+<table>
+<tr><td>2024-07-22</td><td>Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.</td></tr>
+<tr><td>2024-07-22</td><td>First Geet.  Geets are like Tweets but simple lines in text files</td></tr>
+</table>
 </div> </body> </html>
