--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1>Geet Duggal</h1>
 <table>
-<tr><td>2024-07-22</td><td>Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.</td></tr>
-<tr><td>2024-07-22</td><td>First Geet.  Geets are like Tweets but simple lines in text files</td></tr>
+2024-07-22 Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.
+2024-07-22 First Geet.  Geets are like Tweets but simple lines in text files
 </table>
 </div> </body> </html>
