--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
-<table width=80%>
+<table>
 <tr><td nowrap>2024-07-22</td><td>Just using ISO-8601 dates for roughly day resolution.  Any further resolution and permalinking can be obtained from Github.</td></tr>
 <tr><td nowrap>2024-07-22</td><td>First Geet.  Geets are like Tweets but simple lines in text files</td></tr>
 </table>
