--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geet Duggal</title>
-    <link rel="stylesheet" href="style.cssv=1.0">
+    <link rel="stylesheet" href="style.css?v=1.0">
 </head>
 <body>
 <div class="content">
