--- a/index.html
+++ b/index.html
@@ -14,4 +14,9 @@
 <tr><td nowrap>2024-07-22</td><td>Just using ISO-8601 dates for roughly day resolution.<br/>Any further resolution and permalinking can be obtained from Github.</td></tr>
 <tr><td nowrap>2024-07-22</td><td>First Geet.  Geets are like Tweets but simple lines in text files</td></tr>
 </table>
+<p align=right>
+See all Geets with ability to permalink on
+<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.tsv'>Github<a/>
+</p>
+
 </div> </body> </html>
