--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </table>
 <p>
 See all Geets with ability to permalink on
-<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.tsv'>Github</a>
+<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.tsv'>Github</a>.
 </p>
 
 </div> </body> </html>
