--- a/header.html
+++ b/header.html
@@ -10,4 +10,4 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
-<p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a></p>
+<p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a></p>
