testing geeter github oauth

--- a/geeter.html
+++ b/geeter.html
@@ -14,7 +14,7 @@
     </form>
     <button id="loginButton">Login with GitHub</button>
     <script>
-        const clientId = 'YOUR_GITHUB_CLIENT_ID';
+        const clientId = 'Ov23lijztEAKMo8ij7cx';
         const redirectUri = window.location.origin + '/callback.html';
 
         document.getElementById('loginButton').addEventListener('click', () => {
