--- a/callback.html
+++ b/callback.html
@@ -22,6 +22,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.access_token) {
+                    alert('Setting local storage');
                     localStorage.setItem('githubToken', data.access_token);
                     window.location.href = '/';
                 } else {
