--- a/callback.html
+++ b/callback.html
@@ -11,7 +11,6 @@
         const code = params.get('code');
 
         if (code) {
-            alert('Data');
             fetch('https://geetduggal.netlify.app/.netlify/functions/exchange_token', {
                 method: 'POST',
                 headers: {
@@ -20,7 +19,10 @@
                 },
                 body: JSON.stringify({ code })
             })
-            .then(response => response.json())
+            .then(response => {
+               alert("Received);
+               response.json()
+            })
             .then(data => {
                 if (data.access_token) {
                     alert('Setting local storage');
