testing geeter github oauthush

--- a/callback.html
+++ b/callback.html
@@ -20,7 +20,7 @@
                 body: JSON.stringify({ code })
             })
             .then(response => {
-               alert("Received);
+               alert("Received");
                response.json()
             })
             .then(data => {
