testing geeter github oauth

--- a/callback.html
+++ b/callback.html
@@ -21,6 +21,7 @@
                 body: JSON.stringify({ code })
             })
             .then(response => {
+               alert("RESPONSE");
                response.json()
             })
             .then(data => {
