--- a/callback.html
+++ b/callback.html
@@ -23,6 +23,7 @@
             .then(response => {
                alert("RESPONSE");
                response.json()
+               alert(response);
             })
             .then(data => {
                 if (data.access_token) {
