--- a/callback.html
+++ b/callback.html
@@ -23,7 +23,7 @@
             .then(response => {
                alert("RESPONSE");
                response.json()
-               alert(response);
+               alert(response.json());
             })
             .then(data => {
                 if (data.access_token) {
