--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
     <form id="geetForm">
-        <label for="geetInput">Enter your text:</label>
+        <label for="geetInput">Enter your Geet:</label>
         <input type="text" id="geetInput" name="geetInput" required>
         <button type="submit">Submit</button>
         <button id="loginButton">Login with GitHub</button>
@@ -41,7 +41,7 @@
             if (response.ok) {
                 alert('Submitted successfully');
             } else {
-                alert('Submission failed');
+                alert('Submission failed. Are you Geet?');
             }
         });
     </script>
