--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,8 @@
     <form id="geetForm">
         <label for="geetInput">Enter your Geet:</label>
-        <input type="text" id="geetInput" name="geetInput" required>
-        <button type="submit">Submit</button>
-        <button id="loginButton">Login with GitHub</button>
+        <input class="input-box" type="text" id="geetInput" name="geetInput" required>
+        <button class="button" type="submit">Submit</button>
+        <button class="button" id="loginButton">Login with GitHub</button>
     </form>
     <script>
         const clientId = 'Ov23lijztEAKMo8ij7cx';
