--- a/footer.html
+++ b/footer.html
@@ -39,7 +39,7 @@
             });
 
             if (response.ok) {
-                alert('Submitted successfully');
+                alert('Done gone Geeted.');
             } else {
                 alert('Submission failed. Are you Geet?');
             }
