Initial ambient synth commit: code needs cleaning!

--- a/footer.html
+++ b/footer.html
@@ -45,4 +45,19 @@
             }
         });
     </script>
+    <div class="container">
+        <div class="controls">
+            <select id="streamSelect">
+                <option value="none">No Ambience</option>
+                <!-- Options will be populated dynamically -->
+            </select>
+
+            <span id="bRollCheckboxes">
+                <!-- B-Roll checkboxes will be populated dynamically -->
+            </span>
+
+            <div class="loading-spinner" id="loadingSpinner"></div>
+        </div>
+    </div>
+    <script src="ambient-synth.js"></script>
 </div> </body> </html>
