--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geet Duggal</title>
     <link rel="stylesheet" href="style.css?v=1721866614">
+    <link rel="stylesheet" href="style-ambient-synth.css">
 </head>
 <body>
 <div class="content">
