Initial ambient synth commit: code needs cleaning!

--- a/footer.html
+++ b/footer.html
@@ -47,15 +47,14 @@
     </script>
     <div class="container">
         <div class="controls">
+            <button id="playPauseButton" class="play-button"></button>
             <select id="streamSelect">
                 <option value="none">No Ambience</option>
                 <!-- Options will be populated dynamically -->
             </select>
-
             <span id="bRollCheckboxes">
                 <!-- B-Roll checkboxes will be populated dynamically -->
             </span>
-
             <div class="loading-spinner" id="loadingSpinner"></div>
         </div>
     </div>
