--- a/test-audio.html
+++ b/test-audio.html
@@ -28,74 +28,30 @@
             margin-top: 20px;
             color: #1E90FF; /* Royal blue */
         }
-
-        #log {
-            margin-top: 20px;
-            font-size: 14px;
-            color: #555;
-            white-space: pre-wrap; /* Preserve whitespace and line breaks */
-            max-width: 90%;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="status">Tap to play audio...</div>
-        <div id="log"></div> <!-- Log output area -->
+        <div id="status">Loading audio...</div>
+        <audio id="audioPlayer" src="aud/lotr.mp3" controls></audio> <!-- Audio element for playback -->
     </div>
 
     <script>
-        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-        let audioBuffer = null;
+        const audioPlayer = document.getElementById('audioPlayer');
+        const statusElement = document.getElementById('status');
 
-        function logMessage(message) {
-            const logElement = document.getElementById('log');
-            logElement.textContent += message + '\n';
-        }
+        audioPlayer.addEventListener('canplaythrough', () => {
+            statusElement.textContent = 'Audio ready to play';
+            audioPlayer.play();
+        });
 
-        async function loadAndPlayAudio(url) {
-            try {
-                logMessage('Fetching audio file...');
-                const response = await fetch(url, { mode: 'cors' });
-                if (!response.ok) throw new Error(`Network response was not ok: ${response.statusText}`);
+        audioPlayer.addEventListener('play', () => {
+            statusElement.textContent = 'Playing audio...';
+        });
 
-                logMessage('Audio file fetched, loading into buffer...');
-                const arrayBuffer = await response.arrayBuffer();
-                logMessage('ArrayBuffer loaded, decoding audio data...');
-
-                audioBuffer = await audioContext.decodeAudioData(arrayBuffer);
-                logMessage('Audio data decoded successfully.');
-
-                document.getElementById('status').textContent = 'Playing audio...';
-                playAudioBuffer();
-            } catch (error) {
-                document.getElementById('status').textContent = 'Failed to load audio.';
-                logMessage('Error loading audio: ' + error.message);
-            }
-        }
-
-        function playAudioBuffer() {
-            if (audioBuffer) {
-                logMessage('Starting audio playback...');
-                const source = audioContext.createBufferSource();
-                source.buffer = audioBuffer;
-                source.connect(audioContext.destination);
-                source.start(0);
-                logMessage('Audio playback started.');
-            }
-        }
-
-        document.addEventListener('click', async () => {
-            try {
-                if (audioContext.state === 'suspended') {
-                    await audioContext.resume();
-                    logMessage('AudioContext resumed.');
-                }
-
-                loadAndPlayAudio('aud/lotr.mp3');
-            } catch (error) {
-                logMessage('Error during interaction: ' + error.message);
-            }
+        audioPlayer.addEventListener('error', (e) => {
+            statusElement.textContent = 'Failed to load audio.';
+            console.error('Error playing audio:', e);
         });
     </script>
 </body>
