--- a/footer.html
+++ b/footer.html
@@ -48,7 +48,7 @@
     <p></p>
     <div class="container">
         <div class="controls">
-            <button id="playPauseButton" class="play-button play">
+            <button id="playPauseButton" class="play-button">
                 <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M8 5v14l11-7z"/></svg>
                 <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px" style="display:none;"><path d="M0 0h24v24H0z" fill="none"/><path d="M6 6h12v12H6z"/></svg>
             </button>
@@ -60,5 +60,8 @@
             <div class="loading-spinner" id="loadingSpinner"></div>
         </div>
     </div>
+
+    <div id="bRollControls"></div> <!-- Container for dynamically added B-roll controls -->
+
     <script src="ambient-synth.js"></script>
 </div> </body> </html>
