--- a/footer.html
+++ b/footer.html
@@ -47,22 +47,22 @@
     </script>
     <p></p>
     <div class="container">
-        <div class="controls">
-            <button id="playPauseButton" class="play-button">
-                <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px">
-                    <path d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M8 5v14l11-7z"/>
-                </svg>
-                <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px" style="display:none;">
-                    <path d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M6 6h12v12H6z"/>
-                </svg>
-            </button>
-            <select id="streamSelect">
-                <option value="none">No Ambience</option>
-            </select>
-            <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
-        </div>
+    <div class="controls">
+        <button id="playPauseButton" class="play-button">
+            <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M8 5v14l11-7z"/>
+            </svg>
+            <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px" style="display:none;">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M6 6h12v12H6z"/>
+            </svg>
+        </button>
+        <select id="streamSelect">
+            <option value="none">No Ambience</option>
+        </select>
+        <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
-    <script src="ambient-synth.js"></script>
+    </div>
+    <script src="webrtc.js"></script>
 </div> </body> </html>
