--- a/webrtc.html
+++ b/webrtc.html
@@ -24,6 +24,6 @@
         </select>
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
-    <script src="webrtc.js"></script>
+    <script src="ambient-synth.js"></script>
 </body>
 </html>
