--- a/footer.html
+++ b/footer.html
@@ -64,5 +64,5 @@
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
     </div>
-    <script src="ambient-synth.js"></script>
+    <script src="webrtc.js"></script>
 </div> </body> </html>
