--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geet Duggal</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css?v=1721866614">
     <link rel="stylesheet" href="style-ambient-synth.css">
 </head>
