--- a/ambient-ui.html
+++ b/ambient-ui.html
@@ -26,10 +26,7 @@
         <select id="streamSelect">
             <option value="none">No Ambience</option>
         </select>
-        <label>
-            <input type="checkbox" id="useBackendCheckbox">
-            Use backend (HLS)
-        </label>
+        <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
     </div>
     <script src="ambient-synth.js"></script>
