--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css?v=1721866614">
     <link rel="stylesheet" href="style-ambient-synth.css">
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
 <div class="content">
