--- a/footer.html
+++ b/footer.html
@@ -64,5 +64,9 @@
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
     </div>
-    <script src="ambient-synth.js?v=1.2"></script>
+    <div id="logContainer" style="border: 1px solid #ccc; padding: 10px; margin-top: 20px;">
+        <h2>Log Output</h2>
+    </div>
+
+    <script src="ambient-synth.js?v=1.3"></script>
 </div> </body> </html>
