--- a/footer.html
+++ b/footer.html
@@ -68,5 +68,5 @@
         <h2>Log Output</h2>
     </div>
 
-    <script src="ambient-synth.js?v=1.3"></script>
+    <script src="ambient-synth.js?v=0.111111111"></script>
 </div> </body> </html>
