--- a/footer.html
+++ b/footer.html
@@ -46,7 +46,7 @@
         });
     </script>
     <p></p>
-    <div class="container">
+    <div class="container" id="floating">
     <div class="controls">
         <button id="playPauseButton" class="play-button">
             <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px">
