--- a/header.html
+++ b/header.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Set the theme color for Safari's browser header -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4169e1">
+    <meta name="theme-color" content="#4169e1">
     <title>Geet Duggal</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css?v=1724393174">
