--- a/header.html
+++ b/header.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#4169e1">
     <title>Geet Duggal</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css?v=1724393174">
-    <link rel="stylesheet" href="style-ambient-synth.css">
+    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style-ambient-synth.css?v=1.1">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
