third tech habits

--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 <div class="content">
 
 <h1>Geet Duggal</h1>
-<p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
+<p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
-<tr><td nowrap width=50px>2024-09-29</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2024-10-08</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2024-10-05</td><td>Third post on 'Tech Habits' live!</td></tr>
+<tr><td nowrap width=50px>2024-09-29</td><td>Vim tip: open multiple files in split mode (horizontal) with 'vi -o <files>'</td></tr>
 <tr><td nowrap width=50px>2024-09-21</td><td>Second post on 'Tech Habits' live!</td></tr>
 <tr><td nowrap width=50px>2024-09-20</td><td>Just heard on a podcast that Cal Newport has a similar idea as my 'written workflow' for Weather Resistant Productivity. He calls it a 'core system'.  Weather resistant productivity expands on it a bit and has a lot of other dimensions but was fun to see this independent affirmation of writing down your system having value!</td></tr>
 <tr><td nowrap width=50px>2024-09-18</td><td>Open the current file’s directory in netrw: Press :, then type :e %:h</td></tr>
 <tr><td nowrap width=50px>2024-09-16</td><td>Vim tip: Ctrl-w x to swap the current window with the next window.</td></tr>
-<tr><td nowrap width=50px>2024-09-13</td><td>Excellent <a href='https://youtu.be/TeF6lomaU3I?si=juvMG5wjkXvBD9RQ'>video on the Lord of the Rings philosophy</a></td></tr>
-<tr><td nowrap width=50px>2024-09-06</td><td>Trying out a post series called 'Tech Habits'.  See first post below in articles.</td></tr>
-<tr><td nowrap width=50px>2024-09-03</td><td>Heuristic: Is this thing I’m doing leaving an impression or making an impact?</td></tr>
 </table>
 
 <script>
-  const text = "Vim tip: open multiple files in split mode (horizontal) with 'vi -o <files>'";
+  const text = "AI-assisted programming is hot: Lex Fridman has an interesting podcast with the Cursor folks and OpenAI just released ChatGPT Canvas";
   let index = 0;
 
 
@@ -57,6 +56,8 @@ See all Geets with ability to permalink on
 </p>
 
 <h2>Articles</h2><table>
+<tr><td nowrap width=50px>2024-10-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac'>Tech Habits: Managing Project Lists in Plain Text Files and Obsidian</a></td></tr>
+<tr><td nowrap width=50px>2024-09-22</td><td><a href='https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466'>Tech Habits: Capture Everything in One Place?</a></td></tr>
 <tr><td nowrap width=50px>2024-09-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-obsidian-live-preview-vi-focus-mode-alarms-for-calendar-events-8c42976be5af'>Tech Habits: Obsidian Live Preview, Vi Focus Mode, & Alarms for Calendar Events</a></td></tr>
 <tr><td nowrap width=50px>2024-08-27</td><td><a href='https://medium.com/@geetduggal/2a90c4357068'>Weather Resistant Productivity</a></td></tr>
 <tr><td nowrap width=50px>2024-07-30</td><td><a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/pke/OAuth.md'>OAuth (An Example PKE Article)</a></td></tr>
@@ -85,12 +86,14 @@ See all Geets with ability to permalink on
 <tr><td nowrap width=50px>2016-12-02</td><td><a href='https://medium.com/@geetduggal/reflections-on-aws-re-invent-2016-e59a847d0463'>Reflections on AWS re:Invent 2016</a></td></tr>
 <tr><td nowrap width=50px>2016-12-01</td><td><a href='https://medium.com/@geetduggal/editor-first-vs-terminal-first-for-development-efea6b02d294'>‘Editor-First’ vs. ‘Terminal-First’ for Development</a></td></tr>
 <tr><td nowrap width=50px>2014-11-11</td><td><a href='https://geetduggal.wordpress.com'>Old Wordpress Blog</a></td></tr>
-<tr><td nowrap width=50px>Date</td><td><a href='URL'>Title</a></td></tr>
 </table>
 
 <h2>Academic</h2>
 <table>
 
+<tr>
+<td>Patro, Rob; Duggal, G; Love, MI; Irizarry, RA; Kingsford, C; <a href='https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5600148/'>Salmon: fast and bias-aware quantification of transcript expression using dual-phase inference</a> <i>Nature Methods</i> 14  417 2017  (<a href='lib/salmon.pdf'>pdf</a>)</td>
+</tr>
 <tr>
 <td>Sefer, Emre; Duggal, Geet; Kingsford, Carl; <a href='https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4904159/'>Deconvolution of ensemble chromatin interaction data reveals the latent mixing structures in cell subpopulations</a> <i>Journal of Computational Biology</i> 23 6 425-438 2016 Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA (<a href='lib/deconvolution.pdf'>pdf</a>)</td>
 </tr>
@@ -120,9 +123,6 @@ See all Geets with ability to permalink on
 </tr>
 <tr>
 <td>Duggal, Geet *; Navlakha, Saket *; Girvan, Michelle; Kingsford, Carl; <a href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=1APlUC8AAAAJ&citation_for_view=1APlUC8AAAAJ:u5HHmVD_uO8C'>Uncovering many views of biological networks using ensembles of near-optimal partitions</a> <i>Proceedings of the 1st International Workshop on Discovering, Summarizing and Using Multiple Clusterings (KDD MultiClust)</i> 9 9  2010 Washington DC (<a href='lib/biomodularity.pdf'>pdf</a>)</td>
-</tr>
-<tr>
-<td>Authors <a href='URL'>Title</a> <i>Publication</i> Volume Number Pages Year Publisher (<a href='lib/PDF'>pdf</a>)</td>
 </tr>
 </table>
 <p>* indicates equal contribution. Profile on
