--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,7 @@
             </svg>
         </button>
         <select id="streamSelect">
-            <option value="none">No Ambience</option>
+            <option value="none">🔇</option>
         </select>
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
